--- a/css/fuente3.css
+++ b/css/fuente3.css
@@ -1,5 +1,20 @@
-h2 {
+* {
+    margin: 0;
+    padding: 0;
+}
+div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(2,12,66);
+    color: white;
+    height: 100vh;
+    width: 100%;
+}
+label {
     font-family: 'waltograph', sans-serif;
+    font-size: 12em;
+    text-align: center;
 }
 /* waltograph */
 @font-face {
@@ -8,6 +23,6 @@ h2 {
     font-style: normal;
     font-weight: 400;
     src: url('../fonts/waltograph42.otf'); /* IE9 Compat Modes */
-    src: url('../fonts/waltographUI.ttf'); /* IE6-IE8 */
+       : url('../fonts/waltographUI.ttf') format('embedded-opentype'); /* IE6-IE8 */
         
   }
