--- a/css/fuentes1.css
+++ b/css/fuentes1.css
@@ -1,6 +1,20 @@
-h2 {
-    color: red;
+{
+    margin: 0;
+    padding: 0;
+}
+div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgb(255,255,255);
+    color: rgb(64,64,64);
+    height: 100vh;
+    width: 100%;
+}
+label {
     font-family: 'Cinzel', sans-serif;
+    font-size: 9em;
+    text-align: center;
 }
 /* cinzel-700 - latin */
 @font-face {
