--- a/css/catalogo.css
+++ b/css/catalogo.css
@@ -150,6 +150,6 @@ background-size: cover;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .fa-star {
-    color: gold;
+    color: golden;
     font-size: 2.0em;
 }
