--- a/css/media-query.css
+++ b/css/media-query.css
@@ -4,16 +4,24 @@
 }
 .main-nav {
     background-color: rgb(79, 79, 79);
-    height: 80px;
+    height: 72px;
     width: 100%;
+    font-size: 1.3em;
+    font-family: 'Poppins', sans-serif ;
+    font-weight: 700;
+}
+.main-nav-2 {
+  background-color: rgb(0, 0, 0);
+  height: 72px;
+  width: 100%;
+  font-size: 1.3em;
+  font-family: 'Poppins', sans-serif ;
+  font-weight: 700;
 }
 .main-menu {
-    height: 80px;
-    font-size: 1.4em;
-    font-family: 'Poppins', sans-serif;
-    font-weight: 700;
-    text-align: right;
     list-style: none;
+    text-align: right;
+    
 }
 .item-style {
     padding: 20px 30px 28px 30px;
@@ -26,7 +34,9 @@ a {
 .item-style:hover {
     cursor: pointer;
     background-color: rgb(157, 123, 123);
-    font-size: 1em;
+}
+a :hover {
+  cursor: pointer;
 }
 .menu-bar {
     display: none;
@@ -34,9 +44,24 @@ a {
 /*media query*/
 @media only screen and ( max-width: 1500px) {
 .main-menu {
-height: 100vh;
-background-color: rgb(0, 0, 0);
-text-align: center;
+  height: 100vh;
+  background-color: rgb(0, 0, 0);
+  list-style: none;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  left: -100%;
+  transition: left 400ms;
+}
+.main-menu-block {
+  height: 100vh;
+  background-color: rgb(0, 0, 0);
+  list-style: none;
+  text-align: center;
+  position: fixed;
+  width: 100%;
+  left: 0%;
+  transition: left 400ms;
 }
 .item-style {
   display: block;
@@ -53,8 +78,6 @@ text-align: center;
     cursor: pointer;
 }
 }
-
-
   /* poppins-regular - latin */
   @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
