--- a/css/transitions.css
+++ b/css/transitions.css
@@ -1,11 +1,11 @@
-#container {
+#transitions {
     width: 300px;
     height: 300px;
     background-color: red;
     transition: width 2s, height 2s, transform 2s;
 }
 
-#container.expanded:hover {
+#transitions.expanded:hover {
     width: 600px;
     height: 600px;
     transform: translate(300px, 300px);
