--- a/css/style.css
+++ b/css/style.css
@@ -10,9 +10,9 @@
     height: 100%;
     width: 100%;
     position: fixed;
-    -webkit-transition: all 1s ease;
-    -o-transition: all 1s ease;
-    transition: all 1s ease;
+    -webkit-transition: all 2s ease;
+    -o-transition: all 2s ease;
+    transition: all 2s ease;
     z-index: 10000;
   }
   
@@ -43,4 +43,7 @@
     position: fixed;
     z-index: -1;
     width: 100%;
+}
+a {
+  text-decoration: none;
 }
