--- a/css/menu-subitems2.css
+++ b/css/menu-subitems2.css
@@ -54,7 +54,36 @@ a:hover {
     overflow: visible;
     color: black;
     max-height: 500px;
-    background-color: rgb(3, 67, 125);
+    background-color: dodgerblue;
     transition: max-height 1s;
-
+}
+.hamburguer-menu {
+    display: none;
+}
+@media only screen and (max-width: 750px) {
+    .box-hamburguer {
+        width: 100%;
+        height: 72px;
+        background-color: rgb(220, 8, 8);
+        position: fixed;
+    }
+    .hamburguer-menu {
+        color: white;
+        font-size: 1.5em;
+        position: relative;
+        right: 15px;
+        bottom: 15px;
+    }
+    nav {
+        margin-top: 66px;
+        height: calc(100% - 40px);
+        width: 80%;
+        position: fixed;
+    } 
+    .main-menu {
+        text-align: left;
+    }
+    .main-menu > li {
+        text-align: left;
+    }
 }
