--- a/css/flexbox.css
+++ b/css/flexbox.css
@@ -39,8 +39,38 @@ h1 {
     display: flex;
     justify-content: space-around;
 }
+.box-8 {
+    display: flex;
+    justify-content: space-evenly;
+}
+.box-9 {
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+}
+.box-height {
+    height: 500px;
+    gap: 70px;
+}
+.box-10 {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+.box-height-box-11 {
+    width: 400px;
+    height: 300px;
+    background-color: lightgray;
+    padding: 10px;
+}
+.box-22 {
+    width: 30px;
+    background-color: #008080;
+    margin-right: 10px;
+    display: inline-block;
+}
 .box-gen {
-background-color: #c32727;
+background-color: #008080;
 width: 250px;
 height: 250px;
 display: flex;
