--- a/css/starbucks.css
+++ b/css/starbucks.css
@@ -58,8 +58,8 @@ h1 {
 .main-content {
     margin-top: 140px;
     display: grid;
-    grid-template: "empty-left product-text empty-center product-img empty-right" 70px /
-                    140px      5fr          300px        3fr         40px;
+    grid-template: "empty-left product-text empty-center product-img empty-right"  /
+                    140px      5fr          300px        3fr         80px;
 }
 .product-text {
     grid-area: product-text;
@@ -93,6 +93,31 @@ h1 {
 /*     position: relative;
     top: 100px;
     left: 150px; */
+}
+.social-media {
+  grid-area: social-media;
+  z-index: 10;
+  font-size: 2em;
+  color: white;
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
+  flex-direction: column;
+  gap: 40px;
+  margin-top: -100px;
+}
+footer {
+  position: fixed;
+  bottom: 20px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+
+  gap: 40px;
+  z-index: 10;
+}
+.style-img-mini {
+  z-index: 20;
 }
 @font-face {
     font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
