--- a/css/style.css
+++ b/css/style.css
@@ -214,37 +214,93 @@ html{
     margin-right: 2px;
 }
 /* SECCION RESUMEN */
-.resumen{
-    background-color: #e6e6e6;
-    padding: 140px 0 100px 0;
-    text-align: center;
+/* Esta clase se genera dinámicamente por la librera para graficos */
+.score .box canvas{
+  position:absolute;
+  top: 0;
+  left: 0;
 }
-.resumen .contenido-seccion{
-    max-width: 1000px;
-    margin: auto;
-    padding: 0 10px;
+/* SECCION T R A B A J O S */
+.trabajos{
+  max-width: 1100px;
+  margin: auto;
+  padding: 0 20px;
 }
-.resumen .contenido-seccion h3{
-    text-transform: uppercase;
-    font-size: 30px;
+.trabajos h2{
+  text-align: center;
 }
-.resumen .contenido-seccion .info{
-    text-align: left;
-    display: flex;
-    justify-content: space-between;
-    margin-top: 30px;
+.trabajos nav{
+  text-align: center;
+  margin: 30px 0;
 }
-.resumen .contenido-seccion .info .col{
-    width: 45%;
+.trabajos nav a{
+  text-decoration: none;
+  display: inline-block;
+  margin: 0 20px;
+  color: #007be5;
+  font-weight: bold;
+  padding: 3px 10px;
+  border: 3px solid transparent;
+  border-radius: 10px;
 }
-.resumen .contenido-seccion .info .col .titulo{
-    display: inline-block;
-    color: #940253;
-    font-weight: bold;
-    border: 2px solid #940253;
-    padding: 10px;
+.trabajos nav a:hover{
+  border: 3px solid #ff5b00;
+}
+/* Esta clase se agregrá dinámicamente cuando haya seleccionada una opción */
+.borde{
+  border: 3px solid #ff5b00 !important;  
+}
+.trabajos .galeria .item img{
+  width: 100%;
+  height: 100%;
+  display: block;
+}
+.trabajos .galeria{
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(330px, 1fr));
+  grid-gap:30px;
+}
+.trabajos .galeria .item{
+  position: relative;
+  overflow: hidden;
+  border: 1px solid #8d8d8d ;
+  border-radius: 10px;
+}
+.trabajos .galeria .item .info{
+  position: absolute;
+  top: -100%;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  background-color:#fff ;
+  width: 100%;
+  padding: 20px;
+  opacity: 0;
+  transition: .3s;
+}
+.trabajos .galeria .item .info h3{
+  color: #000;
+  margin-bottom: 20px;
+}
+.trabajos .galeria .item .info span{
+  color: #8d8d8d;
+  display: inline-block;
+  border: 2px solid #8d8d8d;
+  margin: 0 3px;
+  padding:  0 5px;
+}
+.trabajos .galeria .item .info a{
+  display: block;
+  margin: 20px;
+  text-decoration: none;
+  color: #007be5;
+  font-weight: bold;
+}
+.trabajos .galeria .item:hover .info{
+  opacity: 1;
+  top: 0;
+}
 
-}
 .resumen .contenido-seccion .info .col table{
     margin-top: 30px;
     border-collapse: collapse;
