--- a/css/sneakers.css
+++ b/css/sneakers.css
@@ -1,511 +1,107 @@
-@import url("https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap");
-* {
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
-body {
-  font-family: "Kumbh Sans", sans-serif;
-}
-
-.header {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  height: 68px;
-  padding: 0 24px;
-}
-@media (min-width: 1115px) {
-  .header {
-    height: 112px;
-    border-bottom: 1px solid hsl(220deg, 14%, 75%);
-  }
-}
-.header__navigation {
-  width: 175px;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-@media (min-width: 1115px) {
-  .header__navigation {
-    width: 590px;
-  }
-}
-.header__menu:hover {
-  cursor: pointer;
-}
-@media (min-width: 1115px) {
-  .header__menu {
-    display: none;
-  }
-}
-.header__cart-avatar {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  width: 70px;
-}
-@media (min-width: 1115px) {
-  .header__cart-avatar {
-    width: 125px;
-  }
-}
-.header__cart {
-  position: relative;
-}
-.header__cart--notification {
-  display: none;
-  background-color: hsl(26deg, 100%, 55%);
-  width: 15px;
-  height: 12px;
-  border-radius: 16px;
-  position: absolute;
-  top: -2px;
-  right: -5px;
-  font-size: 0.6em;
-  text-align: center;
-  color: hsl(0deg, 0%, 100%);
-}
-.header__cart:hover {
-  cursor: pointer;
-}
-.header__avatar {
-  width: 24px;
-}
-@media (min-width: 1115px) {
-  .header__avatar {
-    width: 48px;
-  }
-}
-.header__avatar:hover {
-  cursor: pointer;
-  border: 2px solid hsl(26deg, 100%, 55%);
-  border-radius: 50%;
-}
-
-.navbar {
-  display: none;
-  width: 400px;
-}
-.navbar__items {
-  list-style: none;
-  display: flex;
-  justify-content: space-between;
-}
-.navbar__link {
-  text-decoration: none;
-  color: hsl(219deg, 9%, 45%);
-  display: block;
-  height: 112px;
-  padding-top: 42px;
-}
-.navbar__link:hover {
-  border-bottom: 4px solid hsl(26deg, 100%, 55%);
-}
-@media (min-width: 1115px) {
-  .navbar {
-    display: block;
-  }
-}
-
-.modal-navbar {
-  background-color: hsl(0deg, 0%, 100%);
-  width: 250px;
-  height: 100vh;
-  padding: 28px 24px;
-}
-.modal-navbar__background {
-  background-color: hsla(0deg, 0%, 0%, 0.5);
-  position: absolute;
-  top: 0;
-  left: 0;
+header {
+  height: 100px;
   width: 100%;
-  height: 100%;
-  z-index: 1;
-  overflow: hidden;
-}
-.modal-navbar__items {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  height: 200px;
-  list-style: none;
-  margin-top: 50px;
-}
-.modal-navbar__link {
-  text-decoration: none;
-  color: hsl(220deg, 13%, 13%);
-  font-weight: 700;
-  font-size: 1.1em;
-}
-.modal-navbar__close-icon:hover {
-  cursor: pointer;
+  z-index: 10;
 }
 
-.gallery__image-container {
-  height: 300px;
+.main-content {
+  display: grid;
+  grid-template:"empty-left box-left empty-center box-info empty-right" 400px /
+                  240px        1fr      180px        1fr     240px;
+  z-index: 10;                
+}
+.box-left {
+  grid-area: box-left;
+  grid-template: "box-img"
+                  "box-thumbnail" /
+                  1fr;
+}
+.box-img {
+  grid-area: box-img;
+}
+
+.main-img {
   width: 100%;
-  background-image: url("../images/image-product-1.jpg");
-  background-position-y: -35px;
-  background-size: cover;
+  border-radius: 20px;
 }
-.gallery__previus {
-  background-color: hsl(0deg, 0%, 100%);
-  width: 40px;
-  height: 40px;
-  padding: 12px;
-  border-radius: 50%;
-  position: absolute;
-  top: 170px;
-  left: 15px;
+.main-img-fixed {
+  width: 500px;
+  border-radius: 20px;
 }
-.gallery__previus:hover {
-  cursor: pointer;
-}
-@media (min-width: 1115px) {
-  .gallery__previus {
-    display: none;
-  }
-}
-.gallery__next {
-  background-color: hsl(0deg, 0%, 100%);
-  width: 40px;
-  height: 40px;
-  padding: 12px;
-  border-radius: 50%;
-  position: absolute;
-  top: 170px;
-  left: 320px;
-}
-.gallery__next:hover {
-  cursor: pointer;
-}
-@media (min-width: 1115px) {
-  .gallery__next {
-    display: none;
-  }
-}
-.gallery__thumnails {
-  display: none;
-}
-@media (min-width: 1115px) {
-  .gallery__thumnails {
-    display: flex;
-    justify-content: space-between;
-  }
-}
-.gallery__thumnail {
-  width: 90px;
-  border-radius: 16px;
-}
-.gallery__thumnail:hover {
-  cursor: pointer;
-  border: 2px solid hsl(26deg, 100%, 55%);
-}
-@media (min-width: 1115px) {
-  .gallery {
-    width: 446px;
-    cursor: pointer;
-  }
-  .gallery__image-container {
-    background-position-y: 0;
-    border-radius: 16px;
-    height: 446px;
-    margin-bottom: 32px;
-  }
-}
-
-.details {
-  padding: 24px;
-}
-.details__company {
-  color: hsl(26deg, 100%, 55%);
-  text-transform: uppercase;
-  font-size: 0.8em;
-  letter-spacing: 1px;
-  margin-bottom: 12px;
-}
-.details__title {
-  font-size: 1.7em;
-  margin-bottom: 16px;
-}
-.details__description {
-  font-size: 0.94em;
-  color: hsl(219deg, 9%, 45%);
-  line-height: 24px;
-  margin-bottom: 24px;
-}
-.details__prices {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 24px;
-  align-items: center;
-}
-.details__now {
-  font-size: 1.8em;
-  font-weight: 700;
-  display: flex;
-  align-items: center;
-  gap: 18px;
-}
-.details__discount {
-  font-size: 0.5em;
-  background-color: hsl(25deg, 100%, 94%);
-  color: hsl(26deg, 100%, 55%);
-  padding: 4px;
-  border: 4px;
-}
-.details__before {
-  font-weight: 700;
-  color: hsl(219deg, 9%, 45%);
-  text-decoration: line-through;
-}
-.details__button {
-  background-color: hsl(26deg, 100%, 55%);
-  width: 100%;
-  height: 57px;
-  border-radius: 8px;
-  border: none;
-  color: hsl(0deg, 0%, 100%);
-  font-size: 0.9em;
-  font-weight: 700;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 16px;
-}
-.details__button:hover {
-  cursor: pointer;
-  opacity: 0.5;
-}
-@media (min-width: 1115px) {
-  .details {
-    width: 446px;
-    padding-top: 60px;
-  }
-  .details__title {
-    font-size: 2.7em;
-    margin-bottom: 48px;
-  }
-  .details__description {
-    font-size: 0.9em;
-    margin-bottom: 37px;
-  }
-  .details__prices {
-    flex-direction: column;
-    align-items: flex-start;
-  }
-  .details__product-quantity {
-    display: flex;
-    gap: 32px;
-  }
-}
-
-.input {
-  height: 57px;
-  display: flex;
-  justify-content: space-between;
-  background-color: hsl(223deg, 64%, 98%);
-}
-.input__minus {
-  width: 25px;
-  height: 100%;
-  padding: 24px 5px;
-}
-.input__minus:hover {
-  cursor: pointer;
-}
-.input__number {
-  width: 100%;
-  border: none;
-  background-color: hsl(223deg, 64%, 98%);
-  font-size: 1.2em;
-  font-weight: 700;
-  font-family: "Kumbh Sans", sans-serif;
-  text-align: center;
-  outline: none;
-}
-.input__plus {
-  width: 25px;
-  height: 100%;
-  padding: 19px 3px;
-}
-.input__plus:hover {
-  cursor: pointer;
-}
-
-.cart-modal {
-  display: none;
-  width: 360px;
-  height: 260px;
-  border-radius: 8px;
-  box-shadow: 3px 3px 10px;
-  position: absolute;
-  top: 75px;
-  right: 6px;
-  background-color: hsl(0deg, 0%, 100%);
-}
-.cart-modal__title {
-  font-weight: 700;
-  padding: 24px;
-  border-bottom: 1px solid hsl(220deg, 14%, 75%);
-}
-.cart-modal__chekout-container {
-  padding: 24px;
-}
-.cart-modal__details-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 24px;
-  color: hsl(219deg, 9%, 45%);
-}
-.cart-modal__image {
+.box-icons {
   width: 50px;
-  border-radius: 4px;
-}
-.cart-modal__price span {
-  color: hsl(0deg, 0%, 0%);
-  font-weight: 700;
-}
-.cart-modal__delete:hover {
-  cursor: pointer;
-}
-.cart-modal__chekount {
-  background-color: hsl(26deg, 100%, 55%);
-  width: 100%;
-  height: 57px;
-  border-radius: 8px;
-  border: none;
-  color: hsl(0deg, 0%, 100%);
-  font-size: 0.9em;
-  font-weight: 700;
+  height: 50px;
+  border-radius: 25px;
+  background-color: wheat;
   display: flex;
   align-items: center;
   justify-content: center;
-  gap: 16px;
 }
-.cart-modal__chekount:hover {
+.box-icons:hover {
   cursor: pointer;
-  opacity: 0.5;
 }
-
-.modal-gallery {
-  width: 550px;
+.icon-syle {
+  font-size: 1.2em;
 }
-.modal-gallery__background {
-  background-color: hsla(0deg, 0%, 0%, 0.5);
-  position: absolute;
+.img-hidden {
+  display: none;
+}
+.box-icons-left {
+  position: relative;
+  top: -275px;
+  left: -25px;
+}
+.box-icons-right {
+  position: relative;
+  top: -325px;
+  left: 475px;
+}
+.box-img-fixed {
+  width: 100%;
+  height: 100vh;
+  position: fixed;
+  background-color: #00000097;
+  z-index: 20;
   top: 0;
   left: 0;
-  width: 100%;
-  height: 100%;
-  z-index: 1;
-  overflow: hidden;
-  display: none;
-  place-content: center;
-}
-.modal-gallery__close-container {
-  text-align: right;
-  height: 30px;
-}
-.modal-gallery__close {
-  width: 16px;
-}
-.modal-gallery__close:hover {
-  cursor: pointer;
-  content: url("../images/icon-close-orange.svg");
-}
-.modal-gallery__image-container {
-  background-image: url("../images/image-product-1.jpg");
-  height: 446px;
-  background-size: cover;
-  border-radius: 16px;
-  margin-bottom: 32px;
-  position: relative;
-}
-.modal-gallery__thumnails {
   display: flex;
-  justify-content: space-between;
-  width: 450px;
-  margin: auto;
+  align-items: center;
+  justify-content: center;
 }
-.modal-gallery__thumnail {
-  width: 90px;
-  border-radius: 16px;
+.box-img-selected {
+  width: 500px;
+  height: 500px;
 }
-.modal-gallery__thumnail:hover {
-  cursor: pointer;
-  border: 2px solid hsl(26deg, 100%, 55%);
-}
-.modal-gallery__previus {
-  background-color: hsl(0deg, 0%, 100%);
-  width: 40px;
-  height: 40px;
-  padding: 12px;
-  border-radius: 50%;
-  position: absolute;
-  top: 190px;
-  left: -15px;
-}
-.modal-gallery__previus:hover {
-  cursor: pointer;
-}
-@media (min-width: 1115px) {
-  .modal-gallery__previus {
-    display: block;
-  }
-}
-.modal-gallery__next {
-  background-color: hsl(0deg, 0%, 100%);
-  width: 40px;
-  height: 40px;
-  padding: 12px;
-  border-radius: 50%;
-  position: absolute;
-  top: 190px;
-  left: 520px;
-}
-.modal-gallery__next:hover {
-  cursor: pointer;
-}
-@media (min-width: 1115px) {
-  .modal-gallery__next {
-    display: block;
-  }
+.box-thumbnail {
+  grid-area: box-thumbnail;
+  display: grid;
+  grid-template: "thumb-1 thumb-2 thumb-3 thumb-4" /
+                  1fr     1fr     1fr      1fr
 }
 
-.main-container {
-  width: 375px;
-  margin: auto;
-  position: relative;
+.thumb-1 {
+  grid-area: thumb-1;
 }
-@media (min-width: 1115px) {
-  .main-container {
-    width: 1115px;
-  }
+.thumb-2 {
+  grid-area: thumb-2;
 }
-
-@media (min-width: 1115px) {
-  .content {
-    display: flex;
-    padding: 90px 50px;
-    gap: 124px;
-  }
+.thumb-3 {
+  grid-area: thumb-3;
 }
-
-.show {
-  display: block;
+.thumb-4 {
+  grid-area: thumb-4;
 }
-
-.cart-empty {
-  font-weight: 700;
-  color: hsla(0deg, 0%, 0%, 0.5);
-  text-align: center;
-  margin-top: 30px;
+.thumb {
+  width: 100%;
+  border-radius: 30px;
+  padding: 15px;
 }
-
-/*# sourceMappingURL=main.css.map */
+.box-info {
+  grid-area: box-info;
+}
